# docs/swagger.yaml
@@ -175,6 +175,8 @@ definitions:
     type: object
   handlers.CreateVirtualSeverRequestDto:
     properties:
+      admin:
+        $ref: '#/definitions/handlers.CreateVirtualSeverRequestDtoAdminDto'
       displayName:
         maxLength: 255
         minLength: 1
@@ -185,8 +187,16 @@ definitions:
         maxLength: 255
         minLength: 1
         type: string
+      projects:
+        items:
+          $ref: '#/definitions/handlers.CreateVirtualSeverRequestDtoProjectDto'
+        type: array
       require2fa:
         type: boolean
+      serviceUsers:
+        items:
+          $ref: '#/definitions/handlers.CreateVirtualSeverRequestDtoServiceUserDto'
+        type: array
       signingAlgorithm:
         enum:
         - RS256
@@ -195,6 +205,128 @@ definitions:
     required:
     - displayName
     - name
+    type: object
+  handlers.CreateVirtualSeverRequestDtoAdminDto:
+    properties:
+      displayName:
+        maxLength: 255
+        minLength: 1
+        type: string
+      passwordHash:
+        type: string
+      primaryEmail:
+        type: string
+      username:
+        maxLength: 255
+        minLength: 1
+        type: string
+    required:
+    - displayName
+    - passwordHash
+    - primaryEmail
+    - username
+    type: object
+  handlers.CreateVirtualSeverRequestDtoProjectDto:
+    properties:
+      applications:
+        items:
+          $ref: '#/definitions/handlers.CreateVirtualSeverRequestDtoProjectDtoApplicationDto'
+        type: array
+      description:
+        type: string
+      name:
+        maxLength: 255
+        minLength: 1
+        type: string
+      resourceServers:
+        items:
+          $ref: '#/definitions/handlers.CreateVirtualSeverRequestDtoProjectDtoResourceServerDto'
+        type: array
+      roles:
+        items:
+          $ref: '#/definitions/handlers.CreateVirtualSeverRequestDtoProjectDtoRoleDto'
+        type: array
+      slug:
+        maxLength: 255
+        minLength: 1
+        type: string
+    required:
+    - name
+    - slug
+    type: object
+  handlers.CreateVirtualSeverRequestDtoProjectDtoApplicationDto:
+    properties:
+      displayName:
+        maxLength: 255
+        minLength: 1
+        type: string
+      hashedSecret:
+        type: string
+      name:
+        maxLength: 255
+        minLength: 1
+        type: string
+      postLogoutUris:
+        items:
+          type: string
+        type: array
+      redirectUris:
+        items:
+          type: string
+        type: array
+      type:
+        enum:
+        - public
+        - confidential
+        type: string
+    required:
+    - displayName
+    - name
+    - redirectUris
+    - type
+    type: object
+  handlers.CreateVirtualSeverRequestDtoProjectDtoResourceServerDto:
+    properties:
+      description:
+        type: string
+      name:
+        maxLength: 255
+        minLength: 1
+        type: string
+      slug:
+        maxLength: 255
+        minLength: 1
+        type: string
+    required:
+    - name
+    - slug
+    type: object
+  handlers.CreateVirtualSeverRequestDtoProjectDtoRoleDto:
+    properties:
+      description:
+        type: string
+      name:
+        maxLength: 255
+        minLength: 1
+        type: string
+    required:
+    - name
+    type: object
+  handlers.CreateVirtualSeverRequestDtoServiceUserDto:
+    properties:
+      publicKey:
+        type: string
+      roles:
+        items:
+          type: string
+        type: array
+      username:
+        maxLength: 255
+        minLength: 1
+        type: string
+    required:
+    - publicKey
+    - username
     type: object
   handlers.GetApplicationResponseDto:
     properties:
